// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Search/Table/index renders empty slot for empty state 1`] = `
<div>
  <div>
    No results
  </div>
</div>
`;

exports[`containers/Search/Table/index renders error for InputError data fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Invalid input at 
      <code />
      : 
      <pre
        style="white-space: pre-wrap;"
      >
        We can not handle this input
      </pre>
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index renders error for QuerySyntaxError data fail state 1`] = `
<div>
  <section>
    <h1>
      Syntax error
    </h1>
    <details>
      Invalid input at 
      <code>
        search.query
      </code>
      : 
      QuerySyntaxError
      <pre
        style="white-space: pre-wrap;"
      >
        Syntax error in query
      </pre>
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index renders error for general fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Something went wrong
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index renders error for page fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Page loading failed
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index renders null for idle state 1`] = `<div />`;

exports[`containers/Search/Table/index renders operation error for other OperationError data fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Operation error: 
      Internal server error
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index renders skeleton for in-progress state 1`] = `
<div>
  <div>
    Loading…
  </div>
</div>
`;

exports[`containers/Search/Table/index renders timeout error for OperationError data fail state 1`] = `
<div>
  <section>
    <h1>
      Timeout error
    </h1>
    <details />
  </section>
</div>
`;
